finish first version on document on FvC

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -86,6 +86,17 @@
 }
 
 
+@article{Chen-2016,
+  title = {A General Method for Parameter Estimation in Light-Response Models},
+  volume = {6},
+  doi = {10.1038/srep27905},
+  number = {1},
+  journal = {Scientific Reports},
+  author = {Chen, Lei and Li, Zhong-Bin and Hui, Cang and Cheng, Xiaofei and Li, Bai-Lian and Shi, Pei-Jian},
+  month = sep,
+  year = {2016}
+}
+
 @article{Collatz-1991,
   title = {Physiological and Environmental Regulation of Stomatal Conductance, Photosynthesis and Transpiration: A Model That Includes a Laminar Boundary Layer},
   volume = {54},
@@ -97,8 +108,6 @@
   year = {1991},
   pages = {107--136}
 }
-
-
 
 
 @Article{Charrier-2013,
@@ -174,6 +183,22 @@
 }
 
 
+@article{Domingues-2010,
+  title = {Co-Limitation of Photosynthetic Capacity by Nitrogen and Phosphorus in {{West Africa}} Woodlands: {{Nutrients}} Constraints on Photosynthesis in {{African}} Woodlands},
+  volume = {33},
+  shorttitle = {Co-Limitation of Photosynthetic Capacity by Nitrogen and Phosphorus in {{West Africa}} Woodlands},
+  doi = {10.1111/j.1365-3040.2010.02119.x},
+  number = {6},
+  journal = {Plant, Cell \& Environment},
+  author = {Domingues, Tomas Ferreira and Meir, Patrick and Feldpausch, Ted R. and Saiz, Gustavo and Veenendaal, Elmar M. and Schrodt, Franziska and Bird, Michael and Djagbletey, Gloria and Hien, Fidele and Compaore, Halidou and Diallo, Adama and Grace, John and Lloyd, Jon},
+  month = jan,
+  year = {2010},
+  pages = {959--980}
+}
+
+
+
+
 @article{Dong-2017,
   title = {Leaf Nitrogen from First Principles: Field Evidence for Adaptive Variation with Climate},
   volume = {14},
@@ -196,6 +221,21 @@
   year = {2011},
   pages = {825--835},
 }
+
+
+@article{Duursma-2015,
+  title = {Plantecophys - {{An R Package}} for {{Analysing}} and {{Modelling Leaf Gas Exchange Data}}},
+  volume = {10},
+  doi = {10.1371/journal.pone.0143346},
+  number = {11},
+  journal = {PLOS ONE},
+  author = {Duursma, Remko A.},
+  editor = {Struik, Paul C.},
+  month = nov,
+  year = {2015},
+  pages = {e0143346}
+}
+
 
 @Article{Falster-2011,
   author = {D S Falster and {\AA} Br\"annstr\"om and U Dieckmann and M Westoby},
@@ -343,6 +383,31 @@
 	pages = {531--545}
 }
 
+@article{Kattge-2011,
+  title = {{{TRY}} - a Global Database of Plant Traits},
+  volume = {17},
+  doi = {10.1111/j.1365-2486.2011.02451.x},
+  number = {9},
+  journal = {Global Change Biology},
+  author = {Kattge, J. and D{\'\i}Az, S. and Lavorel, S. and Prentice, I. C. and Leadley, P. and B{\"o}Nisch, G. and Garnier, E. and Westoby, M. and Reich, P. B. and Wright, I. J. and Cornelissen, J. H. C. and Violle, C. and Harrison, S. P. and Van BODEGOM, P. M. and Reichstein, M. and Enquist, B. J. and Soudzilovskaia, N. A. and Ackerly, D. D. and Anand, M. and Atkin, O. and Bahn, M. and Baker, T. R. and Baldocchi, D. and Bekker, R. and Blanco, C. C. and Blonder, B. and Bond, W. J. and Bradstock, R. and Bunker, D. E. and Casanoves, F. and Cavender-Bares, J. and Chambers, J. Q. and Chapin Iii, F. S. and Chave, J. and Coomes, D. and Cornwell, W. K. and Craine, J. M. and Dobrin, B. H. and Duarte, L. and Durka, W. and Elser, J. and Esser, G. and Estiarte, M. and Fagan, W. F. and Fang, J. and Fern{\'a}Ndez-M{\'e}Ndez, F. and Fidelis, A. and Finegan, B. and Flores, O. and Ford, H. and Frank, D. and Freschet, G. T. and Fyllas, N. M. and Gallagher, R. V. and Green, W. A. and Gutierrez, A. G. and Hickler, T. and Higgins, S. I. and Hodgson, J. G. and Jalili, A. and Jansen, S. and Joly, C. A. and Kerkhoff, A. J. and Kirkup, D. and Kitajima, K. and Kleyer, M. and Klotz, S. and Knops, J. M. H. and Kramer, K. and K{\"u}Hn, I. and Kurokawa, H. and Laughlin, D. and Lee, T. D. and Leishman, M. and Lens, F. and Lenz, T. and Lewis, S. L. and Lloyd, J. and Llusi{\`a}, J. and Louault, F. and Ma, S. and Mahecha, M. D. and Manning, P. and Massad, T. and Medlyn, B. E. and Messier, J. and Moles, A. T. and M{\"u}Ller, S. C. and Nadrowski, K. and Naeem, S. and Niinemets, {\"u}. and N{\"o}Llert, S. and N{\"u}Ske, A. and Ogaya, R. and Oleksyn, J. and Onipchenko, V. G. and Onoda, Y. and Ordo{\~n}Ez, J. and Overbeck, G. and Ozinga, W. A. and Pati{\~n}O, S. and Paula, S. and Pausas, J. G. and Pe{\~n}Uelas, J. and Phillips, O. L. and Pillar, V. and Poorter, H. and Poorter, L. and Poschlod, P. and Prinzing, A. and Proulx, R. and Rammig, A. and Reinsch, S. and Reu, B. and Sack, L. and Salgado-Negret, B. and Sardans, J. and Shiodera, S. and Shipley, B. and Siefert, A. and Sosinski, E. and Soussana, J.-F. and Swaine, E. and Swenson, N. and Thompson, K. and Thornton, P. and Waldram, M. and Weiher, E. and White, M. and White, S. and Wright, S. J. and Yguel, B. and Zaehle, S. and Zanne, A. E. and Wirth, C.},
+  month = sep,
+  year = {2011},
+  pages = {2905--2935}
+}
+
+@article{Kattge-2009,
+  title = {Quantifying Photosynthetic Capacity and Its Relationship to Leaf Nitrogen Content for Global-Scale Terrestrial Biosphere Models},
+  volume = {15},
+  doi = {10.1111/j.1365-2486.2008.01744.x},
+  number = {4},
+  journal = {Global Change Biology},
+  author = {Kattge, Jens and Knorr, Wolfgang and Raddatz, Thomas and Wirth, Christian},
+  month = apr,
+  year = {2009},
+  pages = {976--991}
+}
+
+
 @book{Keddy-1989,
   title = {Competition},
   publisher = {{Springer Netherlands}},
@@ -409,6 +474,19 @@
 }
 
 
+@article{Leigh-2012,
+  title = {Do Thick Leaves Avoid Thermal Damage in Critically Low Wind Speeds?},
+  volume = {194},
+  doi = {10.1111/j.1469-8137.2012.04058.x},
+  number = {2},
+  journal = {New Phytologist},
+  author = {Leigh, A. and Sevanto, S. and Ball, M. C. and Close, J. D. and Ellsworth, D. S. and Knight, C. A. and Nicotra, A. B. and Vogel, S.},
+  month = apr,
+  year = {2012},
+  pages = {477--487}
+}
+
+
 @Article{Leimar-2008,
   title = {Evolution of phenotypic clusters through competition and local adaptation along an environmental gradient},
   volume = {62},
@@ -463,6 +541,17 @@
   pages = {735--742}
 }
 
+
+@article{Lu-2016,
+  title = {Optimal Stomatal Behaviour under Stochastic Rainfall},
+  volume = {394},
+  doi = {10.1016/j.jtbi.2016.01.003},
+  journal = {Journal of Theoretical Biology},
+  author = {Lu, Yaojie and Duursma, Remko A. and Medlyn, Belinda E.},
+  month = apr,
+  year = {2016},
+  pages = {160--171}
+}
 
 @article{Lusk-2013,
   title = {Correlates of Tree Species Sorting along a Temperature Gradient in {{New Zealand}} Rain Forests: Seedling Functional Traits, Growth and Shade Tolerance},
@@ -524,6 +613,17 @@
   pages = {480--495},
 }
 
+
+@article{Marechaux-2017,
+  title = {An Individual-Based Forest Model to Jointly Simulate Carbon and Tree Diversity in {{Amazonia}}: Description and Applications},
+  shorttitle = {An Individual-Based Forest Model to Jointly Simulate Carbon and Tree Diversity in {{Amazonia}}},
+  doi = {10.1002/ecm.1271},
+  journal = {Ecological Monographs},
+  author = {Mar{\'e}chaux, Isabelle and Chave, J{\'e}r{\^o}me},
+  month = jul,
+  year = {2017}
+}
+
 @Article{McDowell-2008,
   title = {Mechanisms of plant survival and mortality during drought: why do some plants survive while others succumb to drought?},
   volume = {178},
@@ -547,19 +647,27 @@
 }
 
 
-@article{Medlyn-2011a,
+@article{Medlyn-2002,
+  title = {Temperature Response of Parameters of a Biochemically Based Model of Photosynthesis. {{II}}. {{A}} Review of Experimental Data},
+  volume = {25},
+  number = {9},
+  journal = {Plant, Cell \& Environment},
+  author = {Medlyn, B. E. and Dreyer, Erwin and Ellsworth, D. and Forstreuter, M. and Harley, P. C. and Kirschbaum, M. U. F. and Le Roux, Xavier and Montpied, Pierre and Strassemeyer, J. and Walcroft, A. and {others}},
+  year = {2002},
+  pages = {1167--1179}
+}
+
+
+@article{Medlyn-2011,
   title = {Reconciling the Optimal and Empirical Approaches to Modelling Stomatal Conductance: {{RECONCILING OPTIMAL AND EMPIRICAL STOMATAL MODELS}}},
   volume = {17},
   doi = {10.1111/j.1365-2486.2010.02375.x},
   number = {6},
-  journaltitle = {Global Change Biology},
+  journal = {Global Change Biology},
   author = {Medlyn, Belinda E. and Duursma, Remko A. and Eamus, Derek and Ellsworth, David S. and Prentice, I. Colin and Barton, Craig V. M. and Crous, Kristine Y. and De Angelis, Paolo and Freeman, Michael and Wingate, Lisa},
-  date = {2011-06},
+  year = {2011},
   pages = {2134--2144}
 }
-
-
-
 
 @Article{Moles-2014,
   title = {Which is a better predictor of plant traits: temperature or precipitation?},
@@ -606,6 +714,18 @@
   year = {2006},
   pages = {521--547}
 }
+
+
+@article{Onoda-2004,
+  title = {Allocation of Nitrogen to Cell Walls Decreases Photosynthetic Nitrogen-Use Efficiency},
+  volume = {18},
+  number = {3},
+  journal = {Functional Ecology},
+  author = {Onoda, Yusuke and Hikosaka, Kouki and Hirose, Tadaki},
+  year = {2004},
+  pages = {419--425}
+}
+
 
 
 @Article{Onoda-2011,
@@ -868,6 +988,34 @@
   pages = {49--69},
 }
 
+
+@article{Sperry-2016,
+  title = {Pragmatic Hydraulic Theory Predicts Stomatal Responses to Climatic Water Deficits},
+  volume = {212},
+  doi = {10.1111/nph.14059},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Sperry, John S. and Wang, Yujie and Wolfe, Brett T. and Mackay, D. Scott and Anderegg, William R. L. and McDowell, Nate G. and Pockman, William T.},
+  month = nov,
+  year = {2016},
+  pages = {577--589}
+}
+
+
+@article{Sperry-2017,
+  title = {Predicting Stomatal Responses to the Environment from the Optimization of Photosynthetic Gain and Hydraulic Cost: {{A}} Stomatal Optimization Model},
+  volume = {40},
+  shorttitle = {Predicting Stomatal Responses to the Environment from the Optimization of Photosynthetic Gain and Hydraulic Cost},
+  doi = {10.1111/pce.12852},
+  number = {6},
+  journal = {Plant, Cell \& Environment},
+  author = {Sperry, John S. and Venturas, Martin D. and Anderegg, William R. L. and Mencuccini, Maurizio and Mackay, D. Scott and Wang, Yujie and Love, David M.},
+  month = jun,
+  year = {2017},
+  pages = {816--830}
+}
+
+
 @Article{Stahl-2014,
   title = {Predicting species' range limits from functional traits for the tree flora of North America},
   volume = {111},
@@ -918,6 +1066,58 @@
   pages = {201304551},
 }
 
+@Article{vanOmmenKloeke-2012,
+  title = {Global quantification of contrasting leaf life span strategies for deciduous and evergreen species in response to environmental conditions},
+  volume = {21},
+  doi = {10.1111/j.1466-8238.2011.00667.x},
+  journal = {Global Ecology and Biogeography},
+  author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
+  year = {2012},
+  pages = {224--235},
+}
+
+
+@article{Walker-2014,
+  title = {The Relationship of Leaf Photosynthetic Traits - {{Vcmax}} and {{Jmax}} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area: A Meta-Analysis and Modeling Study},
+  volume = {4},
+  shorttitle = {The Relationship of Leaf Photosynthetic Traits - {{{\emph{V}}}} {\textsubscript{Cmax}} and {{{\emph{J}}}} {\textsubscript{Max}} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area},
+  doi = {10.1002/ece3.1173},
+  number = {16},
+  journal = {Ecology and Evolution},
+  author = {Walker, Anthony P. and Beckerman, Andrew P. and Gu, Lianhong and Kattge, Jens and Cernusak, Lucas A. and Domingues, Tomas F. and Scales, Joanna C. and Wohlfahrt, Georg and Wullschleger, Stan D. and Woodward, F. Ian},
+  month = aug,
+  year = {2014},
+  pages = {3218--3235}
+}
+
+
+
+@article{Wang-2017,
+  title = {Towards a Universal Model for Carbon Dioxide Uptake by Plants},
+  volume = {3},
+  doi = {10.1038/s41477-017-0006-8},
+  number = {9},
+  journal = {Nature Plants},
+  author = {Wang, Han and Prentice, I. Colin and Keenan, Trevor F. and Davis, Tyler W. and Wright, Ian J. and Cornwell, William K. and Evans, Bradley J. and Peng, Changhui},
+  month = sep,
+  year = {2017},
+  pages = {734--741}
+}
+
+
+
+@article{Wolf-2016,
+  title = {Optimal Stomatal Behavior with Competition for Water and Risk of Hydraulic Impairment},
+  volume = {113},
+  doi = {10.1073/pnas.1615144113},
+  number = {46},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Wolf, Adam and Anderegg, William R. L. and Pacala, Stephen W.},
+  month = nov,
+  year = {2016},
+  pages = {E7222--E7230}
+}
+
 
 @article{Wright-2002b,
   title = {Convergence towards Higher Leaf Mass per Area in Dry and Nutrient-Poor Habitats Has Different Consequences for Leaf Life Span},
@@ -929,7 +1129,7 @@
   pages = {534--543}
 }
 
-@Article{Wright-2002,
+@Article{Wright-2002a,
   title = {Leaves at low versus high rainfall: coordination of structure, lifespan and physiology},
   volume = {155},
   doi = {10.1046/j.1469-8137.2002.00479.x},
@@ -996,12 +1196,3 @@
   pages = {76--92},
 }
 
-@Article{vanOmmenKloeke-2012,
-  title = {Global quantification of contrasting leaf life span strategies for deciduous and evergreen species in response to environmental conditions},
-  volume = {21},
-  doi = {10.1111/j.1466-8238.2011.00667.x},
-  journal = {Global Ecology and Biogeography},
-  author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
-  year = {2012},
-  pages = {224--235},
-}
