--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage[osf]{mathpazo}
-\usepackage{ms}                 
+\usepackage{ms}
 \usepackage{natbib}
 \usepackage{graphicx}
 \usepackage{caption}
@@ -61,7 +61,7 @@ leaf nitrogen per area ($N_{area}$) with aridity (see literature.pdf
 for a in progress review of the literature). $LMA$
 \citep{Wright-2004,Onoda-2011,Moles-2014} and $N_{area}$
 \citep{Wright-2005,Maire-2015} both increase with aridity, but these
-patterns are very weak. 
+patterns are very weak.
 
 
 Plot of pattern for leaf traits extracted from glopnet \citep{Wright-2004}.
@@ -102,7 +102,7 @@ theoretical climatic optimum.  Generally, one single traits determines
 both the local adaption to the abiotic conditions -- through the
 distance to an optimal trait value varying along the gradients -- and
 the competitive interaction -- through a normal competition kernel
-based on trait value of the species and its competitors \citep[see][]{Case-2000}. The problem is that as these studies are based on abstract traits, they are thus of limited use to explain observed patterns in traits variation in the field.  
+based on trait value of the species and its competitors \citep[see][]{Case-2000}. The problem is that as these studies are based on abstract traits, they are thus of limited use to explain observed patterns in traits variation in the field.
 
 Recently a few studies have started to connect physiological approach
 and the theoretical approach to build trait-based models of full
@@ -117,16 +117,16 @@ traits and simultaneously allows for coexistence within sites and
 variation across sites. Coexistence is driven by competition for light
 in size-structured meta-populations and the outcomes of competition is
 moderated by environmental factors such as site productivity and
-disturbance regime. In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. In \plant\ the coordination between $LMA$ and $LSS$ discriminate different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favored in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favored in low light condition.  
+disturbance regime. In \plant\ the coexistence between tree is mainly related to difference in successional niche underpinned by $LMA$ through competition for light. In \plant\ the coordination between $LMA$ and $LSS$ discriminate different strategies of resource use. Species with low $LMA$ have a greater potential maximum growth and are thus favored in high light condition, whereas high $LMA$ species have longer leaf life span and thus are more conservative of their resource and are favored in low light condition.
 
 \section{Key questions}
 
 We will explore how the predicted mixture of traits changes along aridity gradient exploring three different assumptions about how aridity
-affect the dynamics and competition for light. 
+affect the dynamics and competition for light.
 
 First the aridity gradient can simply affect
 the productivity with consequence on the process of light
-competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}. 
+competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
 
 
 Secondly, the environmental gradient can affect the
@@ -135,7 +135,7 @@ trade-off between LMA and LLS). For instance, it has been reported
 that the coordination between $LLS$ and $LMA$ is changing along
 aridity gradient both in regional \citep{Wright-2002b} and global
 studies \citep{Wright-2004}. The elevation of the relation between
-$LMA$ and $LLS$ decreases with aridity resulting in a lower leaf life span for a given $LMA$. Some studies have also reported potential effect on the slope of the relationship. This could be due to a higher investment in leaf nitrogen per area $N_{area}$ at higher aridity \citep{Wright-2002b}. 
+$LMA$ and $LLS$ decreases with aridity resulting in a lower leaf life span for a given $LMA$. Some studies have also reported potential effect on the slope of the relationship. This could be due to a higher investment in leaf nitrogen per area $N_{area}$ at higher aridity \citep{Wright-2002b}.
 
 Thirdly, we could explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the abundance of photosynthetic apparatus in the leaf and allow the plant to achieve higher photosynthesis for a given stomatal conductance. We will do this both with an empirical photosynthesis model and with a coupled model of photosynthesis and stomatal conductance (see \citet{Prentice-2014,Wang-2017} for optimization approach using this type of models).
 
@@ -160,7 +160,7 @@ quantitative predictions for the effect of key climatic variable
 model. Several authors have challenged the idea of summing the cost of
 water and carbon gain on the ground that competition should favor
 carbon gain optimization only \citep{Wolf-2016} and the idea that the
-main effect of carbon stress come through cavitation \citep{Sperry-2016,Sperry-2017}. 
+main effect of carbon stress come through cavitation \citep{Sperry-2016,Sperry-2017}.
 
 A key point that have been raised by \citet{Dong-2017} is that
 $N_{area}$ could be divided in structural and rubisco related N (using
@@ -224,7 +224,7 @@ This can be seen In Glopnet as (i) the elevation of the LTR \textit{vs.} LMA is 
 The figure \ref{fig:lma_map} represents how the evolved community
 mixture of LMA change along a productivity gradient when the elevation
 and slope (but mainly elevation) of LMA vs LTR were changing with
-precipitation MAP.  
+precipitation MAP.
 
 \begin{figure}[ht]
 \centering
@@ -266,8 +266,8 @@ however coming with a higher respiration cost (potentially also a higher leaf tu
 
  \citet{Wright-2003} explore how N can substitute for water. Assuming that $A_{area} \propto N_{area} \, g_s$ (with $g_s$ stomatal conductance, and $N_{area}$ being related to $V_{cmax}$ and thus $c_a - c_i = c(1-\chi)$). One solution would be to assume that the water stress is represented by $1/g_s$ and $N_{area}$ could off-set the effect of water stress on $A_{area}$ (in our case $A_{max}$). The cost of leaf N comes from the higher dark leaf respiration per area for higher $N_{area}$ and is already include in \plant\ . \footnote{Prentice et al. 2014 expanded this prediction in term of an optimization with a details Farquhar model for C3 plant, but focusing directly on $V_{cmax}$ rather than $N_{area}$.}
 
- The current implementation of Leaf nitrogen per area in `plant` already captures some of the effect proposed by \citet{Wright-2003}. This is build on an empirical relationship between $A_{max}$ and $N_{area}$ 
-($A_{max} = b_{lf1} \times \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2016}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = (1+WS) * b_{lf1} \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between -0.6 high aridity to 0.6 low aridity). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of the implication of this assumption on community assembly. 
+ The current implementation of Leaf nitrogen per area in `plant` already captures some of the effect proposed by \citet{Wright-2003}. This is build on an empirical relationship between $A_{max}$ and $N_{area}$
+($A_{max} = b_{lf1} \times \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2016}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = (1+WS) * b_{lf1} \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between -0.6 high aridity to 0.6 low aridity). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of the implication of this assumption on community assembly.
 
 
 \begin{figure}[ht]
@@ -311,7 +311,7 @@ of three potential rates $J_E$ the light limited rate, $J_C$ the CO2
 rubisco limited rate, and $J_S$ the starch export limitation rate. The
 last limitation by starch export (or triose phosphate utilization)
 limitation is generally neglected as it come into play only at very
-high level of $CO_2$. 
+high level of $CO_2$.
 
 \begin{equation}
 \label{eq:An}
@@ -324,7 +324,7 @@ A_n= min(J_E, J_C, J_s) - R_d.
 %% which is related to $N_{area}$ or $J_E$ which is related to $J_{max}$
 %% which related to $N_{area}$ as well. It is probably better to use
 %% hyperbolic minimum rather than minimum function to avoid
-%% discontinuity. 
+%% discontinuity.
 
 %% The key mechanisms which support that $N_{area}$ might allow to
 %% adapt to low water availability is that increasing $N_{area}$ at a
@@ -388,7 +388,7 @@ The kinetic parameters $K_c$, $K_o$, $V_{cmax}$, and $\tau$ change with temperat
 
 \clearpage
 
-We can use the R package plantecophys \citep{Duursma-2015} to compare the current photosynthesis model of \plant\ and the FvC model for different parameters. In most of the cases I assumed as in \citet{Medlyn-2002} that $J_{max} = 1.67 \times V_{cmax}$. Several other equations have been proposed see \citet{Walker-2014,Kattge-2011}. For the simulations with $N_{area}$ we will also need to express $V_{cmax}$ in function of $N_{area}$ \citep{Kattge-2009,Domingues-2010,Sakschewski-2015}. For instance, \citet{Sakschewski-2015} fitted the following relationship on the TRY data $V_{cmax25} = 31.62 N_{area}^0.801$. 
+We can use the R package plantecophys \citep{Duursma-2015} to compare the current photosynthesis model of \plant\ and the FvC model for different parameters. In most of the cases I assumed as in \citet{Medlyn-2002} that $J_{max} = 1.67 \times V_{cmax}$. Several other equations have been proposed see \citet{Walker-2014,Kattge-2011}. For the simulations with $N_{area}$ we will also need to express $V_{cmax}$ in function of $N_{area}$ \citep{Kattge-2009,Domingues-2010,Sakschewski-2015}. For instance, \citet{Sakschewski-2015} fitted the following relationship on the TRY data $V_{cmax25} = 31.62 N_{area}^0.801$.
 
 
 \begin{figure}[ht]
@@ -400,7 +400,7 @@ We can use the R package plantecophys \citep{Duursma-2015} to compare the curren
 
 The figure \ref{fig:photo} show the light response curves for \plant\, the default FvC, FvC with the light parameters similar to \plant\, the parameters used in \citet{Sterck-2011}, and the parameters used in Troll \citep{Marechaux-2017}.
 
-Then we can see how this scale up to the annual photosynthesis rate using the integration approach of \plant\ . \plant\ use a Michaelis Menten function to approximate the annual photosynthesis rate see figure \ref{fig:photo_annu_plant}. The Michaelis Menten approximation is not working well for the FvC model, see Figure \ref{fig:photo_annu_fvc}. An exponential function \citep{Chen-2016} ($A = p_1 *(1-e^{-p_2* E/p_1})$) or the non-rectangular hyperbola work better, see figure \ref{fig:photo_annu_fvc}. 
+Then we can see how this scale up to the annual photosynthesis rate using the integration approach of \plant\ . \plant\ use a Michaelis Menten function to approximate the annual photosynthesis rate see figure \ref{fig:photo_annu_plant}. The Michaelis Menten approximation is not working well for the FvC model, see Figure \ref{fig:photo_annu_fvc}. An exponential function \citep{Chen-2016} ($A = p_1 *(1-e^{-p_2* E/p_1})$) or the non-rectangular hyperbola work better, see figure \ref{fig:photo_annu_fvc}.
 
 
 \begin{figure}[ht]
@@ -429,12 +429,12 @@ To include the effect of aridity it is need to couple the photosynthesis model w
 A_n = g_s (c_a - c_i) = g_s c_a (1-\chi).
 \end{equation}
 
-Where $c_a$ and $c_i$ are respectively the $CO_2$ mole fraction of the air and in the leaf. 
+Where $c_a$ and $c_i$ are respectively the $CO_2$ mole fraction of the air and in the leaf.
 
 
 For the stomatal model a lot of different options have been proposed that range from empirical models to optimization models and from models that include or not soil water stress. If soil water stress is include some approach also include competition for soil water between trees \citep{Farrior-2013}. My general idea would be to start by a relatively simple model for a first paper and then build on to include more complex processes. In the first model there would be not effect of soil water stress and no representation of competition for water.
 
-I will give a brief overview of the existing stomatal models. 
+I will give a brief overview of the existing stomatal models.
 
 One of the first and most classical model is the one of \citet{Collatz-1991} which connect the FvC photosynthesis model with the Ball Berry model which predict $g_s$. This is an empirical relationship based on the following equation:
 
@@ -460,11 +460,11 @@ g_s \approx g_0 + (1 + \frac{g_1}{\sqrt{D}}) \frac{A_n }{c_a}.
 \end{equation}
 
 
-Then other authors have proposed to account for the impact of xylem cavitation \citet{Wolf-2016,Sperry-2016,Sperry-2017} in the model and also to maximize carbon gain rather than the water use efficiency \citet{Wolf-2016}. I think that \citep{Sperry-2016} propose a framework that would be easy to implement and to connect to a water budget in \plant\ . 
+Then other authors have proposed to account for the impact of xylem cavitation \citet{Wolf-2016,Sperry-2016,Sperry-2017} in the model and also to maximize carbon gain rather than the water use efficiency \citet{Wolf-2016}. I think that \citep{Sperry-2016} propose a framework that would be easy to implement and to connect to a water budget in \plant\ .
 
 But as an initial step we could use either the model of \citet{Medlyn-2011} or \citet{Leuning-1995}. We need to keep in mind that these models that are based only on vpd are supposed to be applicable only to plant without soil water stress.
- 
-The figures \ref{fig:photo_stomat}, \ref{fig:photo_stomat_BB}, \ref{fig:photo_stomat_Leuning}, and \ref{fig:photo_stomat_opti} show the different coupled models in plantecophys. 
+
+The figures \ref{fig:photo_stomat}, \ref{fig:photo_stomat_BB}, \ref{fig:photo_stomat_Leuning}, and \ref{fig:photo_stomat_opti} show the different coupled models in plantecophys.
 
 \begin{figure}[ht]
 \centering
@@ -506,30 +506,80 @@ The variation of the Leuning model with vpd seems to give rise to an annual mode
 \end{figure}
 
 
-So my proposition would be to run simulation with this coupled FvC-Leuning model along a gradient of vpd where the $V_{cmax}$ and $J_{max}$ are related to $N_{area}$ using the link proposed by \citep{Kattge-2009} or \citep{Sakschewski-2015}. 
+So my proposition would be to run simulation with this coupled FvC-Leuning model along a gradient of vpd where the $V_{cmax}$ and $J_{max}$ are related to $N_{area}$ using the link proposed by \citep{Kattge-2009} or \citep{Sakschewski-2015}.
+
+\subsection{Parametrisation of the FvCB}
+
+
+What could be the default parameters of the FvCB model to use for
+forest trees? Here is a short list of existing parametrisation for the
+light response part:
+\begin{itemize}
+
+\item In plantecophys (ADD REF)  $\alpha = 0.24$ and $\theta = 0.85$
+\item In Medlyn et al. 2002 $\alpha = 0.3$ and $\theta = 0.9$
+\item In Plant $\theta = 0.5$ and $\alpha= 0.04$ is not on the same unite (mol of CO2 per mol of photon wherease in FvCB in mol electron per mol photon)  (conversion see Mercado et al 2009 , the conversion of the apparent quantum yield in micromolCO2/micromol quantum into micromol e-/micxromol quantum is done by multipliyng by 4, since four electrons are needed to regenerate RuBP $4*0.04 = 0.16$ but we also probably need to correct for leaf absorbance 0.8 in Medlyn et al. 2002)
+\item In Sterck et al. 2011 $\theta = 0.5$ and $\alpha = 0.25$ (not exactly the same alpha ...)
+\item  In Valladares et al. 1997 tropicla shrub $\theta$ between 0.51 and 0.8 and $\alpha$ (in mol CO2) between 0.048 and 0.066
+\item In TROLL Marechau \& Chave Ecol. Monogr. in press $\alpha = 0.075*4 = 0.3$ and $\theta = 0.7$ based on von Caemmerer 2000
+
+\item In von  Caemmerer 2000 the non rectangular hyperbola light response curve have an initial slope $\alpha_1 \times \PHI_{PSII} \times \beta$ with $\alpha_1$ the leaf absorptance, $\PHI_{PSII}$ the maximum quantum yield of the photosystem II and $\beta$ the fraction of absorbed light that reach PSII.
+\end{itemize}
+
+#LINK Vcmax and Jmax
+The hypothesis of a coordination between Calvin-Benson cycle limited rate of assimilation and electron transport limited rate of assimilation, lead to the asumption of a correlation between Vcmax and Jmax. Different model to link them have been proposed.
+- according to Medlyn et al. 2002 Jmax = 1.67 Vcmax
+- in Walker, A. P. et al. 2014. The relationship of leaf photosynthetic traits - Vcmax and Jmax - to leaf nitrogen, leaf phosphorus, and specific leaf area: a meta-analysis and modeling study. - Ecology and Evolution 4: 3218–3235.
+It is a power function exp(1.01)*V^0.89
+- in Try data from Kattge et al. 2011 exp(1.669)*V^0.75,
+- in Wullschleger 1993 exp(1.425)*V^0.837
+
+ADD Figure Jmax vs Vcmax
+
+The slope of Jmax vs Vcamx (in log log) affect the light level at which photosynthesis become RuBisCO limited. A shallower slope shift the light level to higher light value and a steeper slope to a lower light value. This will thus affect shade tolerance.
+
+The link between Vcmax and Jmax might however be more complexe and depend on the light level and leaf P. According to Walker et al. 2014 the effect of SLA and leaf P are however relatively small. So this is ok to use only Jmax in function of Vcmax.
+
+#Vcmax vs Narea
+Photosynthetic rate should scale positively with leaf Nitrogen (N) because of teh large amount of N invested in RuBisCO. Several relationship have been proposed to link Vcmax and leaf N.
+- Sakschewski et al. 2014 Vcmax = 31.62*Narea^0.801 but UNIT CONVERSION of g per m2 to kg per m2 *1000^0.801
+- ln(Vcmax) = 3.946 + 0.921 * log(N) + 0.121 * log(P) + 0.281*log(N)*log(P), Walker et al. 2014. To get a function of only P take the mean leaf P (in TRY mean leaf P per area is 0.104 g m-2, in Walker et al. 2014 data this is 0.135)
+- Kattge et al. 2009. Vcmax = a + b * N with different value per Biomes estimated either with Vcmax onl or also constrained by Amax.
+- Walker et al. 2017 explore several alternative model for Vcmax:a modificytion of Walker et al. is
+Vcmax = exp(3.712)*N^0.650
+
+- Domingues et al. 2011
+Vcmax = 10^1.57*N^0.55 # Appendix C Table A2
+
+ADD FIGURE Vcmax Narea
+
+Other traits such as leaf P and SLA could also influence Vcmax (Domingues et al. 2010, Walker et al. 2014). SLA have little effect on the link between Vcmax and leaf N.  Leaf P have little direct effect on Vcmax but an important interaction with leaf N: at low leaf P the slope of Vcmax vs leaf N is shallow but at high leaf P thisslope is steep (see Walker et al. 2014).
+It is also possible to use an other apporach where both Vcmax and Jmax are function traits rather than having Jmax a function of Vcmax (Domingues et al. 2010, Walker et al. 2014).
+
+# References:
+Domingues, T. F. et al. 2010. Co-limitation of photosynthetic capacity by nitrogen and phosphorus in West Africa woodlands: Nutrients constraints on photosynthesis in African woodlands. - Plant, Cell \& Environment 33: 959–980.
+Kattge, J. et al. 2009. Quantifying photosynthetic capacity and its relationship to leaf nitrogen content for global-scale terrestrial biosphere models. - Global Change Biology 15: 976–991.
+Kattge, J. et al. 2011. TRY - a global database of plant traits. - Global Change Biology 17: 2905–2935.
+Sakschewski, B. et al. 2015. Leaf and stem economics spectra drive diversity of functional plant traits in a dynamic global vegetation model. - Global Change Biology 21: 2711–2725.
+Walker, A. P. et al. 2014. The relationship of leaf photosynthetic traits - Vcmax and Jmax - to leaf nitrogen, leaf phosphorus, and specific leaf area: a meta-analysis and modeling study. - Ecology and Evolution 4: 3218–3235.
+WULLSCHLEGER, S. D. 1993. Biochemical Limitations to Carbon Assimilation in C3 Plants—A Retrospective Analysis of the A/Ci Curves from 109 Species. - Journal of Experimental Botany 44: 907–920.
+
+
 
 \subsection{TODO to run simulation with this FvC model in plant}
 
-\begin{itemize}
-
-\item I need to change or add the annual photosynthesis in the C code to allow to use also a non-rectangular hyperbola in  ff16 strategy. 
-
-\item I need to choose a parameterisation for the FvC model (this seems to be quite variable in fact). I propose to use either TROLL or Sterck.
-
-\item I need to decide the relationship between $V_{cmax}$ and $N_{area}$ \footnote{We need to discuss the idea of splitting $N_{area}$ in structural and Rubisco}. It seems simple to start with \citet{Sakschewski-2015}.
-\end{itemize}
 
 In the long-term it would be interesting to think about:
 
 \begin{itemize}
 
-\item predict vpd and a full water budget for the observed data (glopnet) to facilitate comparison with theoretical prediction (building on \citet{Prentice-2014}). 
+\item predict vpd and a full water budget for the observed data (glopnet) to facilitate comparison with theoretical prediction (building on \citet{Prentice-2014}).
 
 \item using stomatal model that is linked to the soil water potential (as in \citet{Spery-2016} or \citet{Sterck-2011})
 
-\item include a simple water budget to model tree competition for water 
+\item include a simple water budget to model tree competition for water
 
-\end{itemize}  
+\end{itemize}
 
 %% TODO a list of different assumption an show some example with plantecophys
 
