--- a/ms/references.bib
+++ b/ms/references.bib
@@ -1080,7 +1080,7 @@
 @article{Walker-2014,
   title = {The Relationship of Leaf Photosynthetic Traits - {{Vcmax}} and {{Jmax}} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area: A Meta-Analysis and Modeling Study},
   volume = {4},
-  shorttitle = {The Relationship of Leaf Photosynthetic Traits - {{{\emph{V}}}} {\textsubscript{Cmax}} and {{{\emph{J}}}} {\textsubscript{Max}} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area},
+  shorttitle = {The Relationship of Leaf Photosynthetic Traits - {Vcmax} and {Jmax} - to Leaf Nitrogen, Leaf Phosphorus, and Specific Leaf Area},
   doi = {10.1002/ece3.1173},
   number = {16},
   journal = {Ecology and Evolution},
@@ -1089,6 +1089,20 @@
   year = {2014},
   pages = {3218--3235}
 }
+
+
+@article{Walker-2017,
+  title = {The Impact of Alternative Trait-Scaling Hypotheses for the Maximum Photosynthetic Carboxylation Rate ({Vcmax}) on Global Gross Primary Production},
+  volume = {215},
+  doi = {10.1111/nph.14623},
+  number = {4},
+  journal = {New Phytologist},
+  author = {Walker, Anthony P. and Quaife, Tristan and {van Bodegom}, Peter M. and De Kauwe, Martin G. and Keenan, Trevor F. and Joiner, Joanna and Lomas, Mark R. and MacBean, Natasha and Xu, Chongang and Yang, Xiaojuan and Woodward, F. Ian},
+  month = sep,
+  year = {2017},
+  pages = {1370--1386}
+}
+
 
 
 
@@ -1117,6 +1131,21 @@
   year = {2016},
   pages = {E7222--E7230}
 }
+
+
+@article{Wullschleger-1993,
+  title = {Biochemical {{Limitations}} to {{Carbon Assimilation}} in {{C3 Plants}}\textemdash{}{{A Retrospective Analysis}} of the {{A}}/{{Ci Curves}} from 109 {{Species}}},
+  volume = {44},
+  doi = {10.1093/jxb/44.5.907},
+  number = {5},
+  journal = {Journal of Experimental Botany},
+  author = {WULLSCHLEGER, STAN D.},
+  month = may,
+  year = {1993},
+  pages = {907--920}
+}
+
+
 
 
 @article{Wright-2002b,
